--- a/draft-packages/title-block-zen/KaizenDraft/TitleBlockZen/TitleBlockZen.scss
+++ b/draft-packages/title-block-zen/KaizenDraft/TitleBlockZen/TitleBlockZen.scss
@@ -74,7 +74,6 @@ $tab-container-height-small: $ca-grid * 2.5;
   align-items: center;
   height: $ca-grid * 3.5;
   justify-content: space-between;
-
   border-bottom: $title-block-separator-height solid rgba($kz-color-white, 0.1);
 
   .educationVariant & {
@@ -94,54 +93,123 @@ $tab-container-height-small: $ca-grid * 2.5;
 .title {
   display: flex;
   align-items: center;
+  max-width: 724px;
+
+  .hasLongTitle.hasLongSubtitle & {
+    @include title-block-under-1645 {
+      max-width: 520px;
+    }
+
+    @include title-block-medium-and-small {
+      max-width: 50vw;
+    }
+
+    @media (max-width: 899px) {
+      max-width: 44vw;
+    }
+
+    @include title-block-small {
+      max-width: 83vw;
+    }
+  }
+
+  @include title-block-under-1645 {
+    max-width: 44vw;
+  }
+
+  @include title-block-under-1366 {
+    max-width: 42vw;
+  }
+
+  @include title-block-small {
+    max-width: 83vw;
+  }
 }
 
 .titleAndSubtitle {
   display: flex;
   align-items: center;
+
+  .hasSubtitle & {
+    @include title-block-under-1366 {
+      transform: translateY(-0.38333em);
+    }
+  }
   transform: translateY(-0.0833333em);
 }
 
 .titleAndSubtitleInner {
   display: flex;
 
+  .hasSubtitle.hasLongTitle.hasLongSubtitle & {
+    align-items: center;
+
+    @include title-block-under-1366 {
+      align-items: baseline;
+    }
+  }
+
   .hasSubtitle & {
     align-items: baseline;
+    overflow: hidden;
 
-    @include title-block-small {
+    @include title-block-under-1366 {
       align-items: normal;
       flex-direction: column;
       justify-content: space-between;
+      transform: translateY($ca-grid / 3);
+      // max-width: 42vw;
+
+      .hasLongTitle.hasLongSubtitle & {
+        align-items: baseline;
+      }
+    }
+
+    @include title-block-medium-and-small {
+      // max-width: 42vw;
       transform: translateY($ca-grid / 2);
+    }
+
+    @include title-block-small {
+      // max-width: 88vw;
     }
   }
 }
 
 .titleTextOverride.titleTextOverride {
-  @include title-block-under-1366 {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  padding: 4px 0;
+
+  @media (max-width: $breadcrumb-breakpoint-width) {
     font-family: $kz-typography-heading-2-font-family;
     font-weight: $kz-typography-heading-2-font-weight;
     font-size: $kz-typography-heading-2-font-size;
     line-height: $kz-typography-heading-2-line-height;
     letter-spacing: $kz-typography-heading-2-letter-spacing;
   }
-  @include title-block-medium-and-small {
+  @include title-block-under-1366 {
     font-family: $kz-typography-heading-3-font-family;
     font-weight: $kz-typography-heading-3-font-weight;
     font-size: $kz-typography-heading-3-font-size;
     line-height: $kz-typography-heading-3-line-height;
     letter-spacing: $kz-typography-heading-3-letter-spacing;
+    padding: 2px 0;
   }
-  @include title-block-under-1024 {
+
+  @include title-block-medium-and-small {
     font-family: $kz-typography-heading-4-font-family;
     font-weight: $kz-typography-heading-4-font-weight;
     font-size: $kz-typography-heading-4-font-size;
     line-height: $kz-typography-heading-4-line-height;
     letter-spacing: $kz-typography-heading-4-letter-spacing;
+    padding: 0;
   }
 }
 
 .avatar {
+  display: none;
   box-sizing: border-box;
   border: 3px solid $kz-color-white;
   border-radius: 50%;
@@ -154,8 +222,47 @@ $tab-container-height-small: $ca-grid * 2.5;
     max-width: 100%;
   }
 
+  @include title-block-under-1366 {
+    display: block;
+  }
+
   @include title-block-medium-and-small {
     display: none;
+  }
+
+  .hasSubtitle & {
+    transform: translateY(4px);
+  }
+
+  .hasLongTitle & {
+    display: none;
+  }
+}
+
+.hamburger {
+  display: none;
+  @include ca-margin($end: $ca-grid * 2/3);
+  color: $kz-color-white;
+
+  .educationVariant &,
+  .adminVariant & {
+    color: $kz-color-wisteria-800;
+  }
+
+  @include title-block-medium-and-small {
+    display: flex;
+    align-items: center;
+    transform: translateY(-1px);
+  }
+
+  .hasSubtitle & {
+    @include title-block-under-1366 {
+      transform: translateY(-6px);
+    }
+
+    @include title-block-medium-and-small {
+      transform: translateY(-8px);
+    }
   }
 }
 
@@ -168,10 +275,29 @@ $tab-container-height-small: $ca-grid * 2.5;
   font-size: $kz-typography-paragraph-small-font-size;
   line-height: $kz-typography-paragraph-small-line-height;
   letter-spacing: $kz-typography-paragraph-small-letter-spacing;
+  width: 230px;
+
   @include ca-margin($start: $ca-grid / 2);
 
+  @include title-block-under-1366 {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: auto;
+    margin: ($ca-grid / 5) 0;
+  }
+}
+
+.subtitleText {
+  @include title-block-under-1366 {
+    max-width: 42vw;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
   @include title-block-small {
-    margin: $ca-grid / 3 0;
+    max-width: 88vw;
   }
 }
 
@@ -223,33 +349,6 @@ $tab-container-height-small: $ca-grid * 2.5;
   }
 }
 
-.hamburger {
-  display: none;
-  @include ca-margin($end: $ca-grid * 2/3);
-  color: $kz-color-white;
-
-  .educationVariant &,
-  .adminVariant & {
-    color: $kz-color-wisteria-800;
-  }
-
-  @include title-block-medium-and-small {
-    display: flex;
-    align-items: center;
-    transform: translateY(-1px);
-  }
-
-  @include title-block-under-1024 {
-    transform: translateY(-2px);
-  }
-
-  .hasSubtitle & {
-    @include title-block-small {
-      transform: translateY(-7px);
-    }
-  }
-}
-
 .rowBelowSeparatorInnerContent {
   display: flex;
   width: 100%;
@@ -273,21 +372,18 @@ $tab-container-height-small: $ca-grid * 2.5;
   .breadcrumb:hover + &,
   .breadcrumb:focus + & {
     opacity: 0;
-  }
 
-  // This is a hack. Without this block,
-  // the non-breadcrumb stuff will jump to the right
-  // as it fades out.
-  @media only screen and (max-width: $breadcrumb-breakpoint-width) {
-    .breadcrumb:hover + &,
-    .breadcrumb:focus + & {
-      position: absolute;
-      opacity: 0;
+    @include title-block-under-1645 {
       left: $breadcrumb-circle-width + 12px;
-      transform: translateY(6px);
+      transform: translateY(2px);
+      position: absolute;
+    }
+
+    @include title-block-under-1366 {
+      transform: translateY(10px);
 
       .hasSubtitle & {
-        transform: translateY(0px);
+        transform: translateY(-4px);
       }
     }
   }
@@ -356,6 +452,7 @@ $tab-container-height-small: $ca-grid * 2.5;
 .mainActionsContainer {
   display: flex;
   align-items: center;
+  @include ca-margin($start: $ca-grid / 2);
 
   @include title-block-small {
     display: none;
@@ -414,7 +511,7 @@ $tab-container-height-small: $ca-grid * 2.5;
 }
 
 .breadcrumbText {
-  flex: 0 0 $ca-grid * 8;
+  // flex: 0 0 $ca-grid * 8;
   top: 0;
   display: none;
   @include ca-margin($start: $ca-grid);
@@ -428,6 +525,7 @@ $tab-container-height-small: $ca-grid * 2.5;
   .breadcrumb:hover &,
   .breadcrumb:focus & {
     display: inline-block;
+    max-width: 200px;
     animation: slide-fade 0.4s;
 
     [dir="rtl"] & {
